# torch_pharma

./: .gitignore  .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  import_trace.txt  mkdocs.yml  pyproject.toml  requirements.docs.txt  requirements.txt  script_output.txt  script_output_v2.txt  script_output_v3.txt  script_output_v3_utf8.txt  script_output_v4.txt  script_output_v5.txt  setup.cfg  test_activation_tracker.py  test_import.py  test_imports.py  trace_import.py
.github/workflows/: tests.yml
docs/: index.md  installation.md
docs/api/: index.md  tracking.md
docs/api/data/: index.md
docs/api/evaluation/: index.md
docs/api/models/: index.md
docs/api/molecules/: index.md
docs/api/rl/: index.md
docs/api/tasks/: index.md
docs/api/training/: index.md
docs/datasets/: QM9.md  index.md
docs/examples/molecule_generation/: index.md
docs/getting_started/: concepts.md  overview.md  quickstart.md
docs/tutorials/: index.md  molecule_generation.md  property_prediction.md  rl_optimization.md
examples/binding_affinity/: train_binding.py
examples/molecule_generation/: generate.py
examples/molecule_generation/2302_04313/: qm9_mol_gen_ddpm_train.py  utils.py
examples/property_prediction/: train_qm9.py
examples/rl_optimization/: optimize_qed.py
scripts/: evaluate.py  train.py
tests/: test_diffusion_migration.py  test_models.py  test_molecules.py
torch_pharma/: __init__.py
torch_pharma/data/components/: __init__.py
torch_pharma/data/datasets/: base.py  qm9.py  utils.py
torch_pharma/features/: __init__.py  batch.py  geometry.py
torch_pharma/models/: __init__.py  distributions.py  utils.py
torch_pharma/modules/: activation.py
torch_pharma/molecules/: chemistry.py  featurizers.py  molecule.py
torch_pharma/tasks/: base.py
torch_pharma/training/: trainer.py
torch_pharma/utils/: io.py  logging.py  math.py  visualize.py
(+29 files in other folders)
