[metadata]
name = torch-pharma
version = 0.1.0
author = Tomi Tsuma
author_email = tsuma.thomas@example.com
description = Deep Learning for Pharmaceutical Discovery and Optimization with PyTorch
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9
install_requires =
    torch>=2.0.0
    numpy
    pandas
    rdkit
    torch-geometric
